fixed spacing issues in about section on mobile

--- a/scss/pic.scss
+++ b/scss/pic.scss
@@ -26,8 +26,8 @@ body {
 }
 .box {
     position:relative;
-    height:40%;
-    width:40%;
+    height:600px;
+    width:600px;
     margin:auto;
     display:block;
         
@@ -300,6 +300,7 @@ $form-color: #e8f5e9;
     width: 800px;
     height: 600px;
     background: $background-color;
+    max-width: 100%;
 }
 .box-outside {
     position: absolute;
@@ -464,4 +465,77 @@ $form-color: #e8f5e9;
 }
 textarea.materialize-textarea {
         margin: 20px 0 0 0 !important;
+}
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+/* Styles */
+.box {
+    width: 280px;
+    height: 210px;
+}
+
+#contact-image.box{
+    width: 250px;
+    height: 250px;
+    
+}
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen 
+and (min-width : 321px) {
+/* Styles */
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen 
+and (max-width : 320px) {
+/* Styles */
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+/* Styles */
+}
+
+/* iPads (landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+/* Styles */
+}
+
+/* iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
+/* Styles */
+}
+
+/* Desktops and laptops ----------- */
+@media only screen 
+and (min-width : 1224px) {
+/* Styles */
+#contact-image.box {
+   
+}
+}
+
+/* Large screens ----------- */
+@media only screen 
+and (min-width : 1824px) {
+/* Styles */
+}
+
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* Styles */
 }
